--- a/index.html
+++ b/index.html
@@ -1,14 +1,20 @@
-<<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
   <title>Akan_Names</title>
 
-<link href = "js/script.js"type="text/script">
+
 <link href = "cc/styles.css" rel = "stylesheet"type ="text/css">
-<script src ="bootstrap/css/bootstrap.css"rel ="stylesheet"type ="text/css">
+<link href ="bootstrap/css/bootstrap.css"rel ="stylesheet"type ="text/css">
+<script href = "js/script.js"type="text/javascript"></script>
 </head>
 
 <body>
-
+          <div class="jumbotron mt-2 mb-5 pb-3">
+              <img src="images/akan-ghana.jpg" class="card-img" alt="Avatar" style ="width:100%;height:300px;object-fit: cover;">
+              <div class="header">
+                  <h5 class="card-title">WHAT IS YOUR AKAN NAME!</h5>
+                  <p class="card-text">Akan names are derived from Ghanian culture. Frequently in Ghana, children are given their first name as a 'day name' which corresponds to the day in the week they were born.<br><br></p>
+              </div>
 </body>
 </html>
