--- a/index.html
+++ b/index.html
@@ -1,20 +1,33 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-  <title>Akan_Names</title>
+   <html>
+      <head>
+      <title> Akan Names</title>
+          <link href ="bootstrap/css/bootstrap.css" rel ="stylesheet"type ="text/css">
+          <link href ="css/styles.css" rel ="stylesheet" type ="text/css"/>
+		  <script src="js/scripts.js" type="text/javascript"></script>
+      </head>
 
-
-<link href = "cc/styles.css" rel = "stylesheet"type ="text/css">
-<link href ="bootstrap/css/bootstrap.css"rel ="stylesheet"type ="text/css">
-<script href = "js/script.js"type="text/javascript"></script>
-</head>
-
-<body>
+      <body>
           <div class="jumbotron mt-2 mb-5 pb-3">
-              <img src="images/akan-ghana.jpg" class="card-img" alt="Avatar" style ="width:100%;height:300px;object-fit: cover;">
+              <img src="images/akan-ghana.jpg" class="card-img" alt="Avatar" style ="width:50%;height:300px;object-fit: cover;">
               <div class="header">
                   <h5 class="card-title">WHAT IS YOUR AKAN NAME!</h5>
-                  <p class="card-text">Akan names are derived from Ghanian culture. Frequently in Ghana, children are given their first name as a 'day name' which corresponds to the day in the week they were born.<br><br></p>
+                  <p class="card-text" style = "text-align:center ">Akan names are derived from Ghanian culture. Frequently in Ghana, children are given their first name as a 'day name' which corresponds to the day in the week they were born.<br><br></p>
               </div>
-</body>
-</html>
+              <div style="margin:0px 15px;">
+                <p class="card-text" style="text-align:left">Enter your details below to find your Akan name</p>
+                <div class="form-group">
+                        <label for="birthday">Birthday</label><br/>
+
+                        <label for="birthday">Gender</label><br/>
+                                                 <input type="radio" id="male" name="gender" value="male">
+                                                 <label for="male">Male</label>&nbsp;&nbsp;
+                                                 <input type="radio" id="female" name="gender" value="female">
+                                                 <label for="female">Female</label>
+                                            </div>
+                                            <button type="submit" onclick="getFormValues();" class="btn btn-block btn-primary mb-3">Submit</button>
+                                  </div>
+                        		  </div>
+
+                              </body>
+                            </html>
