--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
       </head>
 
       <body>
+        <img src="images/pwc-ghana.jpg" class="card-img" alt="...">
+ <div class="card-img-overlay">
           <div class="jumbotron mt-2 mb-5 pb-3">
               <img src="images/akan-ghana.jpg" class="card-img" alt="Avatar" style ="width:70%;height:290px;object-fit:cover;">
               <div class="header">
@@ -175,6 +177,6 @@
                     <button type="submit" onclick="getFormValues();" class="btn btn-block btn-primary mb-3">Submit</button>
           </div>
 		  </div>
-
+</div>
       </body>
     </html>
