--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 		  <script src="js/scripts.js" type="text/javascript"></script>
       </head>
       <body>
-        <img src="images/pwc-ghana.jpg" class="card-img" alt="...">
+        <img src="images/pwc-ghana.jpg" class="card-img" alt="pwc for ghana">
  <div class="card-img-overlay">
           <div class="jumbotron mt-2 mb-5 pb-3">
               <img src="images/akan-ghana.jpg" class="card-img" alt="Avatar" style ="width:70%;height:290px;object-fit:cover;">
@@ -166,7 +166,7 @@
 						<option value="1931">1931</option>
 						<option value="1930">1930</option>
 						</select>
-			             <br/><br/>
+			      <br/><br/>
 						 <label for="birthday">Gender</label><br/>
                          <input type="radio" id="male" name="gender" value="male">
                          <label for="male">Male</label>&nbsp;&nbsp;
@@ -174,8 +174,8 @@
                          <label for="female">Female</label>
                     </div>
                     <button type="submit" onclick="getFormValues();" class="btn btn-block btn-primary mb-3">Submit</button>
-          </div>
-		  </div>
-</div>
+            </div>
+		      </div>
+        </div>
       </body>
     </html>
